--- a/index.html
+++ b/index.html
@@ -174,123 +174,75 @@ h1 {
 }
 
   </style>
- <style>
-.link-container {
-    padding: 0.rem 1rem;
-    transition: background-color 0.3s ease;
-   
-   
-    border-radius: 8px;
-    margin-bottom: 12px;
-  }
-
+<style>
  
-
-  .link-name {
-    font-weight: 600;
-    font-size: 1.1rem;
-    text-decoration: none;
-    color: #00eaff;
-    display: block;
-    margin-top: 0.3rem;
-text-align:center;
+  #backBtn {
+    background: var(--accent2);
+    color: var(--text);
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    display: none;
+    font-weight: bold;
   }
-
-  .link-name:hover {
-    text-decoration: underline;
-  }
-
-  .section-title {
-    font-weight: 700;
-    font-size: 1.4rem;
-    margin: 1rem 0;
-    color: #ffffffcc;
-    text-align: center;
-  }
-
-  .number-links {
+  #links, #number-section {
+    padding: 15px;
     display: flex;
-    overflow-x: auto;
-    padding: 0.5rem 1rem 1rem;
-    gap: 0.6rem;
-    scroll-snap-type: x mandatory;
+    flex-direction: column;
+    align-items: center; /* centers .link */
   }
-
-  .number-links .link-container {
-    min-width: 64px;
-    flex-shrink: 0;
+  .link {
+    display: inline-block;
+    padding: 6px 12px;
+    margin: 4px 0;
+    background: var(--card);
+    color: var(--accent);
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: bold;
+    transition: background 0.2s, color 0.2s;
     text-align: center;
-    background: rgba(255, 255, 255, 0.05);
-    border-radius: 8px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    scroll-snap-align: start;
-    font-size: 0.9rem;
-    color: #fff;
   }
-
-  img {
-    width: 0%;
-    border-radius: 6px;
-    margin-top: 0.6rem;
+  .link:hover {
+    background: var(--accent);
+    color: var(--text);
   }
-
-
+  .pages {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-top: 10px;
+    justify-content: center;
+  }
+  .pages a {
+    background: var(--card);
+    color: var(--text);
+    padding: 4px 8px;
+    border-radius: 3px;
+    text-decoration: none;
+    font-size: 0.85rem;
+    transition: background 0.2s, color 0.2s;
+  }
+  .pages a:hover {
+    background: var(--accent2);
+    color: var(--text);
+  }
   .spinner-container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    min-height: 120px;
+    padding: 20px 0;
   }
-
   .spinner {
-    width: 40px;
-    height: 40px;
-    border: 5px solid rgba(255, 255, 255, 0.1);
-    border-top: 5px solid #00c6ff;
+    width: 30px;
+    height: 30px;
+    border: 4px solid rgba(255,255,255,0.1);
+    border-top-color: var(--accent);
     border-radius: 50%;
     animation: spin 1s linear infinite;
   }
-
   @keyframes spin {
     to { transform: rotate(360deg); }
-  }
-
-  li a.coral {
-    color: white;
-  
-    text-decoration: none;
-    display: none;
-  }
-li a.coral strong {
-  font-weight: normal;
-}
-
-
-  li a.coral:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-    color: #fff;
-  }
-
-  li {
-    list-style-type: none;
-    margin-bottom: 10px;
-  }
-
- 
-
-    #backBtn, #homeBtn {
-      width: 45%;
-      font-size: 0.85rem;
-    }
-
-    .link-name {
-      font-size: 0.95rem;
-    }
-
-    .number-links .link-container {
-      min-width: 56px;
-      font-size: 0.85rem;
-    }
   }
 </style>
 
@@ -332,6 +284,17 @@ li a.coral strong {
 
 <div id="number-section"></div>
 <button id="backBtn" style="display:none; margin-bottom: 20px;"> Back</button></div>
+<div>
+  <div id="links">
+    <div class="spinner-container">
+      <div class="spinner"></div>
+    </div>
+  </div>
+
+  <div id="number-section"></div>
+  <button id="backBtn" style="display:none; margin-bottom: 20px;">Back</button>
+</div>
+
 <div>
   <div id="links">
     <div class="spinner-container">
@@ -481,7 +444,6 @@ backBtn.addEventListener('click', () => {
 // Start
 loadLinksFromUrl('https://moviesda12.com/');
 </script>
-
 
   <br/>
   <footer>&copy; 2025 Movies Aro. All rights reserved.</footer>
@@ -25969,6 +25931,7 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
  
 </html>
+
 
 
 
