--- a/index.html
+++ b/index.html
@@ -186,11 +186,17 @@ h1 {
     display: none;
     font-weight: bold;
   }
-  #links, #number-section {
+  #links {
     padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center; /* centers .link */
+  }
+   #number-section {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+   
   }
   .link {
     display: inline-block;
@@ -282,6 +288,7 @@ h1 {
   </div>
 
   <div id="number-section"></div>
+  <br/>
   <button id="backBtn" style="display:none; margin-bottom: 20px;">Back</button>
 </div>
 
@@ -25910,6 +25917,7 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
  
 </html>
+
 
 
 
