--- a/index.html
+++ b/index.html
@@ -176,75 +176,102 @@ h1 {
   </style>
 <style>
  
-  #backBtn {
-    background: var(--accent2);
-    color: var(--text);
-    border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-    cursor: pointer;
-    display: none;
-    font-weight: bold;
-  }
-  
-   #number-section {
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-   
-  }
-  #links {
-    display: inline-block;
-    padding: 6px 12px;
-    margin: 4px 0;
-    background: var(--card);
-    color: var(--accent);
-    text-decoration: none;
-    border-radius: 4px;
-    font-weight: bold;
-    transition: background 0.2s, color 0.2s;
-    text-align: center;
-  }
-  .link:hover {
-    background: var(--accent);
-    color: var(--text);
-  }
-  .pages {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    margin-top: 10px;
-    justify-content: center;
-  }
-  .pages a {
-    background: var(--card);
-    color: var(--text);
-    padding: 4px 8px;
-    border-radius: 3px;
-    text-decoration: none;
-    font-size: 0.85rem;
-    transition: background 0.2s, color 0.2s;
-  }
-  .pages a:hover {
-    background: var(--accent2);
-    color: var(--text);
-  }
-  .spinner-container {
-    display: flex;
-    justify-content: center;
-    padding: 20px 0;
-  }
-  .spinner {
-    width: 30px;
-    height: 30px;
-    border: 4px solid rgba(255,255,255,0.1);
-    border-top-color: var(--accent);
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-  }
-  @keyframes spin {
-    to { transform: rotate(360deg); }
-  }
+ 
+    .spinner-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80px;
+    }
+
+    .spinner {
+        border: 4px solid rgba(255,255,255,0.2);
+        border-top: 4px solid #ff9800;
+        border-radius: 50%;
+        width: 36px;
+        height: 36px;
+        animation: spin 0.8s linear infinite;
+    }
+
+    @keyframes spin {
+        100% { transform: rotate(360deg); }
+    }
+
+    #links {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        max-width: 800px;
+        width: 100%;
+        gap: 10px;
+    }
+
+    .link-container {
+        background: #1e1e1e;
+        padding: 14px 18px;
+        border-radius: 8px;
+        transition: background 0.3s, transform 0.2s;
+    }
+
+    .link-container:hover {
+        background: #272727;
+        transform: translateY(-2px);
+    }
+
+    .link-name {
+        color: #ff9800;
+        text-decoration: none;
+        font-size: 1.1em;
+        font-weight: 500;
+    }
+
+    .link-name:hover {
+        text-decoration: underline;
+    }
+
+    #number-section {
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        max-width: 800px;
+        width: 100%;
+    }
+
+    .number-links {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    .number-links .link-container {
+        flex: 0 0 auto;
+        min-width: 70px;
+        text-align: center;
+    }
+
+    .section-title {
+        font-size: 1.2em;
+        font-weight: bold;
+        color: #ff9800;
+        margin-bottom: 5px;
+    }
+
+    #backBtn {
+        background: #ff9800;
+        color: #121212;
+        border: none;
+        padding: 10px 16px;
+        border-radius: 6px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: background 0.3s;
+    }
+
+    #backBtn:hover {
+        background: #ffa733;
+    }
 </style>
 
 
@@ -25895,6 +25922,7 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
  
 </html>
+
 
 
 
