--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ h1 {
     }
 
     #links {
-        padding: 20px;
+     
         display: flex;
         flex-direction: column;
         align-items: stretch;
@@ -208,7 +208,7 @@ h1 {
     }
 
     .link-container {
-        background: #1e1e1e;
+        background:linear-gradient(to right, var(--accent), var(--accent2));
         padding: 14px 18px;
         border-radius: 8px;
         transition: background 0.3s, transform 0.2s;
@@ -220,7 +220,7 @@ h1 {
     }
 
     .link-name {
-        color: #ff9800;
+        color: white;
         text-decoration: none;
         font-size: 1.1em;
         font-weight: 500;
@@ -230,34 +230,49 @@ h1 {
         text-decoration: underline;
     }
 
+       /* === Pages Section Styles === */
     #number-section {
-        margin-top: 10px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
+        margin-top: 20px;
         max-width: 800px;
         width: 100%;
-    }
-
-    .number-links {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-    }
-
-    .number-links .link-container {
-        flex: 0 0 auto;
-        min-width: 70px;
-        text-align: center;
     }
 
     .section-title {
         font-size: 1.2em;
         font-weight: bold;
         color: #ff9800;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
     }
 
+    .number-links {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+        padding: 10px;
+        background: #1b1b1b;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.5);
+    }
+
+    .number-links .link-container {
+        background: #292929;
+        padding: 8px 14px;
+        border-radius: 6px;
+        text-align: center;
+        min-width: 50px;
+        transition: background 0.3s, transform 0.2s;
+    }
+
+    .number-links .link-container:hover {
+        background: #ff9800;
+        transform: scale(1.05);
+    }
+
+    .number-links .link-name {
+        color: #fff;
+        font-weight: bold;
+        font-size: 0.95em;
+    }
     #backBtn {
         background: #ff9800;
         color: #121212;
@@ -25922,6 +25937,7 @@ Download Link: https://download.moviespage.site/download/page/36452
 </script>
  
 </html>
+
 
 
 
